# mulan-string

./: .gitignore  Makefile  README.md
example/: Makefile  main.cpp  mls_header.hpp  mls_module.cpp
example/gettext/: CMakeLists.txt  main.cpp
example/gettext/po/: example.pot
example/gettext/po/pl_PL/: example.po
example/po/: example.pot
example/po/pl/: example.mo  example.po
manual/: langs.tex  licence.tex  manual.tex  ppov.tex  tpov.tex
mulanstring/: backend.hpp  basic_parse.cpp  basic_parse.hpp  compiler.py  interface.cpp  interface.hpp  language_features.cpp  language_features.hpp  main.cpp  main.hpp  mulanstr_config.hpp  mulanstring-gettext.hpp  mulanstring.hpp  template_object.cpp  template_object.hpp
mulanstring/backend/: dummy.cpp  dummy.hpp  gettext.cpp  gettext.hpp
src/: errors.cpp  errors.h  gettext_backend.cpp  gettext_backend.h  mls_locale.cpp  mls_locale.h  preparser.cpp  preparser.h  template.cpp  template.h
test/: CMakeLists.txt  gettext_backend.cpp  locale_operators.cpp  template_methods.cpp  template_preparser.cpp
test/po/: gettext_test.pot
test/po/pl_PL/: gettext_test.po
